# odooMcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  UPGRADE-TO-LATEST.md  install.bat  pyproject.toml  requirements.txt  run_server.py  test.bat
src/odoo_mcp/: config.py  extensions.py  server.py  tools_accounting.py  tools_inventory.py  tools_product_cost.py  tools_purchase.py  tools_sales.py
