[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-mcp-unified"
version = "2.0.0"
description = "Unified Odoo MCP Server with SSE support and enhanced features"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Claude Code", email = "noreply@anthropic.com" }
]
license = { text = "MIT" }
keywords = ["mcp", "odoo", "erp", "model-context-protocol", "sse", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.17.0",      # Latest stable: v1.17.0 (2025-10-10)
    "fastmcp>=2.12.0",  # Latest stable: v2.12.4 (2025-09-26)
    "requests>=2.31.0",
    "pypi-xmlrpc==2020.12.3",
    "pydantic>=2.0.0",
    "starlette>=0.38.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.290",
]

[project.urls]
Homepage = "https://github.com/golfamigo/odooMcp"
Documentation = "https://github.com/golfamigo/odooMcp/blob/main/README.md"
Repository = "https://github.com/golfamigo/odooMcp"
Issues = "https://github.com/golfamigo/odooMcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
